<resources>
    <string name="app_name">Date control</string>
    <string name="date">01/30/2017</string>
    <string name="FMonth"><![CDATA[>>]]></string>
    <string name="FDay"><![CDATA[>]]></string>
    <string name="PDay"><![CDATA[<]]></string>
    <string name="PMonth"><![CDATA[<<]]></string>
    <string name="slash">/</string>
    <string name="year">2017</string>
    <string name="day">31</string>
    <string name="month">12</string>
</resources>
