<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<Button
    android:id="@+id/btn_prev_month"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:text="@string/PMonth"
    android:background="@color/colorPrimary"
    />

<Button
    android:id="@+id/btn_prev_day"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:text="@string/PDay"
    android:background="@color/colorPrimary"
    />

<TextView
    android:id="@+id/tv_month"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text=""
    android:textAlignment="center"
    android:textSize="20sp"
    android:typeface="monospace"
    tools:text="@string/month" />
<TextView
    android:id="@+id/tv_day"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text=""
    android:textAlignment="center"
    android:textSize="20sp"
    android:typeface="monospace"
    tools:text="@string/day" />
<TextView
    android:id="@+id/tv_year"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text=""
    android:textAlignment="center"
    android:textSize="20sp"
    android:typeface="monospace"
    tools:text="@string/year" />

<Button
    android:id="@+id/btn_next_day"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/FDay"
    android:background="@color/colorPrimary"
    />

<Button
    android:id="@+id/btn_next_month"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/FMonth"
    android:background="@color/colorPrimary"
    />

</merge>